--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -160,3 +160,50 @@
     background: #7B61FF;
     border-radius: 12px;
 }
+
+.destinations {
+    &_header {
+        text-align: left;
+        margin-top: 120px;
+        margin-left: 30px;
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 32px;
+        line-height: 48px;
+        /* identical to box height */
+
+
+        color: #161414;
+    }
+    &_boxes {
+        justify-content: center;
+        margin-top: 64px;
+        align-items: flex-start;
+        padding: 0px;
+        gap: 32px;
+        display: flex;
+        flex-direction: row;
+    }
+}
+
+.box_text {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #161414;
+    span {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 13px;
+        line-height: 20px;
+        /* identical to box height */
+
+
+        color: #979797;
+
+    }
+}
