--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,11 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
-
+@import url('../css/reset.css');
 .container {
     width: 1440px;
     margin: 0 auto;
     padding-left: 30px;
 }
 
+.none {
+    display: none !important;
+}
 
 .header {
     background: url('../img/background1.jpg') center (center/cover) no-repeat;
@@ -615,3 +618,53 @@ ul, li {
 .list_header {
     cursor: default;
 }
+
+
+.media-2box {
+    flex-direction: row;
+}
+
+@media (max-width: 1139px) {
+    .media-2box {
+        display: flex;
+    }
+    .container {
+        padding-left: 0;
+        max-width: 1000px;
+    }
+    .nav_links {
+        // display: none;
+    }
+
+    .links_ul {
+        gap: 30px;
+        margin-top: 15px;
+    }
+
+    .header {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+    }
+    .nav {
+        gap: 20px;
+        justify-content: center;
+    }
+    .header_row {
+        display: flex;
+        width: 900px;
+    }
+
+    .destinations_boxes {
+        flex-direction: column;
+    }
+    .case-2box {
+        display:    ;
+    }
+}
+
+.hamburger-menu {
+    display: none
+}
+
+// hamburger menu
